--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,8 +3,10 @@ Html {
 }
 
 body {
+    color: $dark-grey;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
+    line-height: 1.6;
 }
 
 button {
